--- a/main.html
+++ b/main.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fimage&psig=AOvVaw3T5rYyNiTLLd4T2JXb2gL4&ust=1738479884003000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPD5yp31oYsDFQAAAAAdAAAAABAE" alt="Your Image">
+    <h1>Dastagiri</h1>
+    <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>JavaScript, React, Redux, Node.js, MongoDB, HTML, CSS</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>E-Commerce Application</li>
+            <li>Portfolio Website</li>
+            <li>Blog Platform</li>
+        </ul>
+    </section>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
